<resources>
    <string name="app_name">Pro Pathshala</string>
    <string name="lbl_username">USERNAME</string>
    <string name="hint_username">ENTER USERNAME</string>
    <string name="hint_password">ENTER PASSWORD</string>
    <string name="lbl_password">PASSWORD</string>
    <string name="btn_login_label">LOG IN</string>
    <string name="bt_lbl_forgot_pwd">Forgot Password ?</string>
    <string name="bt_lbl_create_account">Create Account</string>
    <string name="lbl_school_name">Pro Pathshala</string>
    <string name="lbl_school_subtitle">SMART SCHOOL, SMART INDIA</string>
    <string name="profile_name">Dr. P V Ramanna</string>
    <string name="profile_designation">PRINCIPAL OF SCHOOL</string>
    <string name="nav_tv_calender">Calender</string>
    <string name="nav_tv_taketest">Take Test</string>
    <string name="nav_tv_facility">Facility</string>
    <string name="nav_tv_achievements">Achievements</string>
    <string name="nav_tv_lunch_menu">Lunch Menu</string>
    <string name="nav_tv_forms">Forms</string>
    <string name="nav_tv_exam_timetable">Exam Schedule</string>
    <string name="nav_tv_exam_paper">Exam Paper</string>
    <string name="nav_tv_about_us">About Us</string>
    <string name="nav_tv_settings">Settings</string>
    <string name="nav_tv_logout">Logout</string>
    <string name="nav_tv_login">Login</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="nav_tv_student">Student</string>
    <string name="nav_tv_parents">Parents</string>
    <string name="nav_tv_attendance">Attendance</string>
    <string name="nav_tv_assignments">Assignments</string>
    <string name="nav_tv_mail_sms">Mail/SMS</string>
    <string name="nav_tv_result">Results</string>
    <string name="nav_tv_materials">Materials</string>
    <string name="nav_tv_notifications">Notifications</string>
    <string name="user_icon_logo">User Icon Logo</string>
    <string name="img_divider">Image Dividers</string>
    <string name="menu_icon">Home Menu Icon</string>
    <string name="app_icon_desc">App Icon Description</string>
    <string name="tvTitleRegNo">Reg No</string>
    <string name="tvTitleRollNo">Roll No</string>
    <string name="tvTitleClassNo">Class</string>
    <string name="nav_tv_syllabus">Syllabus</string>
    <string name="nav_tv_timetable">Time Table</string>
    <string name="nav_tv_homework">Home Work</string>
    <string name="nav_tv_behaviour">Behaviour</string>
    <string name="nav_tv_parent_meeting">Parent Meeting</string>
    <string name="nav_tv_notice_board">Notice Board</string>
    <string name="nav_tv_sports">Sports</string>
    <string name="nav_tv_feepayment">Fee Payments</string>
    <string name="nav_tv_gallery">Gallery</string>
    <string name="nav_tv_chat">Chat</string>

    <string name="homeworl_desc_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis posuere felis, a fringilla felis. Nulla ullamcorper nulla odio, sit amet molestie ligula facilisis at. Donec quis gravida arcu. Nulla id convallis mauris. Quisque et ipsum ultricies, blandit eros ac, condimentum leo. Phasellus sagittis tincidunt arcu, in congue erat feugiat non. Donec accumsan, risus vitae viverra rhoncus, dui purus maximus ex, ut rhoncus lectus neque ut odio. Maecenas sit amet tempor lacus. Mauris viverra tellus sapien, a aliquet odio auctor a. Nunc viverra dolor vel velit malesuada condimentum. In imperdiet porta placerat. Quisque quis erat rutrum, bibendum velit ut, lobortis dui.</string>
    <string name="btn_label_download">Download Attachment</string>
    <string name="btn_label_no_download">No Attachment</string>
    <string name="tv_label_Class">Class</string>
    <string name="tv_label_Subject">Subject</string>
    <string name="tv_label_Date">Date</string>
    <string name="tv_label_Time">Time</string>
    <string name="tv_label_roomno">Room No :</string>
    <string name="tv_label_present">PRESENT</string>
    <string name="tv_label_absent">ABSENT</string>
    <string name="tv_label_today">TODAY</string>
    <string name="label_class_selection">Select Your Class Room</string>
    <string name="label_section_selection">Select Section of Class</string>

    <!--Testing IDs for AdMob advertisement-->
    <string name="sample_adMob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ads_test_device_id">6AD94C36A4BB46F171C05D3AFD84DBDE</string>
    <string name="test_banner_ads_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_interstitial_ads_id">ca-app-pub-3940256099942544/1033173712</string>


    <!--For Testing Keep this uncommented-->
    <string name="adMob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--For Ads Actual IDs-->

    <!--App Id: ca-app-pub-3377185033414651~3780589844 -->
    <!--Banner Ad Id: ca-app-pub-3377185033414651/4870294329 -->
    <!--Interstitial Ad Id: ca-app-pub-3377185033414651/1342537881 -->

    <!--For Release Keep this uncommented-->
    <!--<string name="adMob_app_id">ca-app-pub-3377185033414651~3780589844</string>
    <string name="banner_ad_id">ca-app-pub-3377185033414651/4870294329</string>
    <string name="interstitial_ad_id">ca-app-pub-3377185033414651/1342537881</string>-->

    <string name="empty_listview_message">This List is Empty..!!</string>
    <string name="nav_tv_teachers">Teachers</string>
    <string name="nav_tv_students">Students</string>

    <string-array name="user_types" >
        <item>Student/Parent</item>
        <item>Teacher</item>
        <item>Admin</item>

    </string-array>


    <string-array name="stud_parent_dashboard_titles">

        <item>Syllabus</item>
        <item>Time Table</item>
        <item>Home Work</item>
        <item>Assignments</item>
        <item>Attendance</item>
        <item>Behaviour</item>
        <item>Parents Meeting</item>
        <item>Notice Board</item>
        <item>Exam Schedule</item>
        <item>Results</item>
        <item>Sports</item>
        <item>Fees Payment</item>
        <item>Gallery</item>
    </string-array>

    <string-array name="teacher_dashboard_titles">

        <item>Syllabus</item>
        <item>Time Table</item>
        <item>Home Work</item>
        <item>Assignments</item>
        <item>Attendance</item>
        <item>Behaviour</item>
        <item>Parents Meeting</item>
        <item>Notice Board</item>
        <item>Exam Schedule</item>
        <item>Results</item>
        <item>Fees Payment</item>
        <item>Gallery</item>
        <item>Chat</item>
    </string-array>

    <string-array name="admin_dashboard_titles">

        <item>Teachers</item>
        <item>Students</item>
        <item>Subjects</item>
        <item>Syllabus</item>
        <item>Time Table</item>
        <item>Home Work</item>
        <item>Assignments</item>
        <item>Attendance</item>
        <item>Behaviour</item>
        <item>Parents Meeting</item>
        <item>Notice Board</item>
        <item>Exam Schedule</item>
        <item>Results</item>
        <item>Fees Payment</item>
        <item>Gallery</item>
        <item>Chat</item>
    </string-array>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Pro Pathshala is available. Please update to version\s</string>
    <string name="youAreNotUpdatedMessage1">\s now</string>
    <string name="update">Update</string>
    <string name="tvDOJTitle">DOJ</string>
    <string name="tvDesignationTitle">DESIGNATION</string>
    <string name="tvPhoneTitle">PHONE</string>
    <string name="tvEmailTitle">EMAIL</string>
    <string name="error_server">SERVER ERROR !!</string>
    <string name="menu_label_add">Add</string>
    <string name="hint_label_add_title">Enter Title</string>
    <string name="hint_lable_description">Enter Description</string>
    <string name="hint_label_date">Enter Deadline Date</string>
    <string name="tv_label_Section">Section</string>
    <string name="tv_label_Title">Title</string>
    <string name="tv_label_Description">Desctiption</string>
    <string name="tv_label_DeadlineDate">Deadline Date</string>
    <string name="btn_label_file_upload">SELECT FILE</string>
    <string name="btn_label_assignment_upload">UPLOAD ASSIGNMENT</string>
    <string name="btn_label_homework_upload">UPLOAD HOMEWORK</string>
    <string name="btn_label_syllabus_upload">UPLOAD SYLLABUS</string>
    <string name="student_id_label">ID</string>
    <string name="tv_student_name_label">NAME</string>
    <string name="no_assignment_message">Assignments List is Empty !</string>
    <string name="no_exam_schedule_message">No Exam Schedule Found !</string>
    <string name="no_syllabus_message">Syllabus List is Empty !</string>
    <string name="tv_label_student_list">List Of Students</string>
    <string name="empty_student_list_message">No Students Exist in this Section !</string>
    <string name="no_event_message">No Event in the list !</string>
    <string name="nav_tv_subjects">Subjects</string>
    <string name="tv_label_subject_list">List Of Subjects</string>
    <string name="tv_label_assignment_list">Assignment List</string>
</resources>
