<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <!--<item
            android:id="@+id/menu_selections"
            android:title="">-->

           <!-- <menu>-->

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login"
                    android:title="@string/nav_tv_login"
                    android:visible="true" />

                <item
                    android:id="@+id/nav_student"
                    android:icon="@drawable/ic_student_male"
                    android:title="@string/nav_tv_student" />


                <item
                    android:id="@+id/nav_parents"
                    android:icon="@drawable/ic_parents_new"
                    android:title="@string/nav_tv_parents" />

                <item
                    android:id="@+id/nav_attendants"
                    android:icon="@drawable/ic_attendance_new"
                    android:title="@string/nav_tv_attendants" />

                <item
                    android:id="@+id/nav_assignments"
                    android:icon="@drawable/ic_assignments_new"
                    android:title="@string/nav_tv_assignments" />

                <item
                    android:id="@+id/nav_mail_sms"
                    android:icon="@drawable/ic_mail_sms_new"
                    android:title="@string/nav_tv_mail_sms" />


                <item
                    android:id="@+id/nav_marks"
                    android:icon="@drawable/ic_marks_new"
                    android:title="@string/nav_tv_marks" />


                <item
                    android:id="@+id/nav_materials"
                    android:icon="@drawable/ic_materials_new"
                    android:title="@string/nav_tv_materials" />

                <item
                    android:id="@+id/nav_notifications"
                    android:icon="@drawable/ic_notification_new"
                    android:title="@string/nav_tv_notifications" />

                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_about_us_new"
                    android:title="@string/nav_tv_about_us" />

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_new"
                    android:title="@string/nav_tv_settings" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/nav_tv_logout"
                    android:visible="false" />
           <!-- </menu>-->


        <!--</item>-->
    </group>

</menu>